--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,6 +102,7 @@ portable-source:
             metrics: metrics.txt
     except:
         - tags
+    image: macos-11-xcode-12
     # Most submitters don't have access to the macOS runners, and if they try
     # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
     # only set on repos that have access to macOS runners, in GitLab repo
@@ -328,7 +329,7 @@ macos-autotools-build:
     before_script:
         - export build_system="autotools"
     tags:
-        - macos
+        - shared-macos-amd64
 
 ubuntu18-04-cmake-build:
     <<: *deb_build_definition
@@ -413,7 +414,7 @@ macos-cmake-build:
         - export CFLAGS=-Werror
         - export CXXFLAGS=-Werror
     tags:
-        - macos
+        - shared-macos-amd64
 
 windows-cmake-Win32-release-build:
     <<: *windows_build_definition
@@ -588,7 +589,8 @@ macos-autotools-test:
         - job: "macos-autotools-build"
           artifacts: true
     tags:
-        - macos
+        - shared-macos-amd64
+    image: macos-11-xcode-12
     # Most submitters don't have access to the macOS runners, and if they try
     # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
     # only set on repos that have access to macOS runners, in GitLab repo
@@ -675,7 +677,8 @@ macos-cmake-test:
         - job: "macos-cmake-build"
           artifacts: true
     tags:
-        - macos
+        - shared-macos-amd64
+    image: macos-11-xcode-12
     # Most submitters don't have access to the macOS runners, and if they try
     # to run macOS pipeline jobs, the jobs will hang forever.  This variable is
     # only set on repos that have access to macOS runners, in GitLab repo
