fix: install dependencies in macOS test tasks
These tasks were passing despite missing steps to install dependencies because
the current private beta macOS runner Graphviz uses is stateful. Moving to the
stateless shared macOS runner for the open beta exposes that testing fails
because the runtime dependencies of Graphviz are missing.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -576,6 +576,9 @@ fedora33-test:
 macos-autotools-test:
     <<: *test_definition
     before_script:
+        - brew update
+        - brew install pango || brew upgrade pango
+        - brew install libxaw || brew upgrade libxaw
         - python3 -m pip install --requirement requirements.txt
         - export build_system="autotools"
         - echo experimental > COLLECTION
@@ -660,6 +663,9 @@ fedora32-cmake-test:
 macos-cmake-test:
     <<: *test_definition
     before_script:
+        - brew update
+        - brew install pango || brew upgrade pango
+        - brew install libxaw || brew upgrade libxaw
         - python3 -m pip install --requirement requirements.txt
         - export build_system="cmake"
         - echo experimental > COLLECTION
