fix: propagate VERSION from macOS build tasks to macOS CI test tasks
The macOS test tasks in CI were picking up the VERSION from the portable source
task, despite their build tasks using a different process to derive VERSION.
This change ensures they get the VERSION file their build task created.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,6 +95,7 @@ portable-source:
         when: on_success
         expire_in: 1 week
         paths:
+            - VERSION
             - Packages/*/*/*/*/*/*.zip
             - Packages/*/*/*/*/*/*.tar.gz
             - Metadata/*/*/*/configure.log
