add test of Agraph construction from DOT source
Towards https://gitlab.com/graphviz/graphviz/-/issues/2001.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(test_common PUBLIC
     gvplugin_gd
     gvplugin_neato_layout
     cgraph
+    cgraph++
     gvc
 )
 
@@ -44,3 +45,4 @@ macro(create_test testname)
 endmacro()
 
 create_test(simple)
+create_test(AGraph_construction)
