add test of GVLayout construction using on-demand loaded plugins
Test construction of a GVLayout object from shared pointers to AGraph
and GVContext objects, performing a layout of AGraph using GVContext.

GVLayout destroy is also implicitly tested since we would detect
potential memory leaks with ASan.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2001.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -48,3 +48,4 @@ endmacro()
 create_test(simple)
 create_test(AGraph_construction)
 create_test(GVContext_construction)
+create_test(GVLayout_construction)
