--- a/lib/gvc++/CMakeLists.txt
+++ b/lib/gvc++/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(gvc++ SHARED
   GVContext.h
   GVContext.cpp
+  GVLayout.h
+  GVLayout.cpp
   )
 
 set_target_properties(gvc++ PROPERTIES CXX_STANDARD 20)
@@ -31,6 +33,7 @@ install(
 install(
   FILES
   GVContext.h
+  GVLayout.h
   DESTINATION ${HEADER_INSTALL_DIR}
   )
 
