add test of GVLayout render creating a GVRenderData object
GVRenderData destroy is also implicitly tested since we would detect
potential memory leaks with ASan.

Towards https://gitlab.com/graphviz/graphviz/-/issues/2001.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -49,3 +49,4 @@ create_test(simple)
 create_test(AGraph_construction)
 create_test(GVContext_construction)
 create_test(GVLayout_construction)
+create_test(GVLayout_render)
