add a very basic SVG analyzer based on SVG++

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,6 +11,13 @@ enable_testing()
 # separate test can be as small as possible
 add_library(test_common STATIC
             catch2_main.cpp
+            svgpp_context.cpp
+            svgpp_context.h
+            svgpp_document_traverser.cpp
+            svgpp_document_traverser.h
+            svg_analyzer.cpp
+            svg_analyzer.h
+            svg_analyzer_interface.h
             ../cmd/dot/dot_builtins.c
     )
 set_target_properties(test_common PROPERTIES CXX_STANDARD 20)
