add a few first tests of the rendered SVG

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -63,3 +63,4 @@ create_test(AGraph_construction)
 create_test(GVContext_construction)
 create_test(GVLayout_construction)
 create_test(GVLayout_render)
+create_test(GVContext_render_svg)
