remove Python 3.8 fallback in Windows CI tasks
As of the previous commit, Python >3.8 is installed prior to running this
script, so no fallback should be required. Python 3.8 can be removed from the
Windows build utilities repository.¹

  ¹ https://gitlab.com/graphviz/graphviz-build-utilities

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -123,8 +123,10 @@ portable-source:
         - $ErrorActionPreference = "Stop"
         - $PSDefaultParameterValues['Out-File:Encoding'] = 'utf8'
         - choco install --yes --no-progress python3
+        - copy C:\Python39\python.exe C:\Python39\python3.exe
         - $env:Path = "C:\Python39;" + $env:Path
-        - python --version
+        - python3 --version
+        - python3 -m pip install --requirement requirements.txt
         # Toolchain definitions
         - if($Env:project_platform -eq "x64") {
             $TARGET_ARCH = "x64";
