enable lcov branch coverage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ option(with_ortho      "ORTHO features in neato layout engine." ON )
 option(with_sfdp       "sfdp layout engine." ON )
 option(with_smyrna     "SMYRNA large graph viewer (disabled by default - experimental)" OFF)
 option(use_sanitizers  "enables using address and undefined behavior sanitizer" OFF)
+option(use_coverage    "enables analyzing code coverage" OFF)
 option(with_cxx_tests  "enables building the C++ tests" OFF)
 
 if (enable_ltdl)
@@ -217,6 +218,15 @@ if (use_sanitizers)
     else()
         add_link_options("-fsanitize=address,undefined")
         add_link_options("-g")
+    endif()
+endif()
+
+if (use_coverage)
+    add_compile_options("-coverage")
+    if (${CMAKE_VERSION} VERSION_LESS "3.16.0")
+        link_libraries("-coverage")
+    else()
+        add_link_options("-coverage")
     endif()
 endif()
 
