add sprintf-like helper
The function sprintf is generally considered unsafe to use in modern C. In the
Graphviz code base, its uses are slowly being replaced with safer alternatives
(#1950). However, the alternative code is frequently overly verbose and
counter-intuitive. This commit adds (hopefully) convenient alternative functions
that can be used to replace sprintf uses. The gv_sprint function is similar to
the GNU asprintf function with a different calling convention.

The tests added alongside follow the same strategy as used for testing
lib/vmalloc.

--- a/lib/cgraph/cgraph.vcxproj
+++ b/lib/cgraph/cgraph.vcxproj
@@ -101,6 +101,7 @@ win_flex -oscan.c scan.l</Command>
     <ClInclude Include="agxbuf.h" />
     <ClInclude Include="cghdr.h" />
     <ClInclude Include="cgraph.h" />
+    <ClInclude Include="sprint.h" />
     <ClInclude Include="strcasecmp.h" />
   </ItemGroup>
   <ItemGroup>
@@ -122,6 +123,7 @@ win_flex -oscan.c scan.l</Command>
     <ClCompile Include="rec.c" />
     <ClCompile Include="refstr.c" />
     <ClCompile Include="scan.c" />
+    <ClCompile Include="sprint.c" />
     <ClCompile Include="subg.c" />
     <ClCompile Include="utils.c" />
     <ClCompile Include="write.c" />
