--- a/.pylintrc
+++ b/.pylintrc
@@ -138,7 +138,9 @@ disable=print-statement,
         deprecated-sys-function,
         exception-escape,
         comprehension-escape,
-        redefined-builtin
+        redefined-builtin,
+        too-many-branches,
+        too-many-statements
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
