--- a/.pylintrc
+++ b/.pylintrc
@@ -140,7 +140,8 @@ disable=print-statement,
         comprehension-escape,
         redefined-builtin,
         too-many-branches,
-        too-many-statements
+        too-many-statements,
+        too-few-public-methods
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
