use CMake support to locate Python 3 before calling it
This change means (1) the CMake build system will fail less cryptically when
Python 3 is unavailable and (2) the CMake build system is now able to locate and
use Python 3 even when it is not called `python3`. Related to #2049.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,11 +105,20 @@ endif()
 
 # ============================ Set Graphviz version ============================
 
+if(${CMAKE_VERSION} VERSION_LESS "3.12.0")
+  find_program(Python3_EXECUTABLE NAMES python3 python3.exe python.exe)
+else()
+  find_package(Python3 COMPONENTS Interpreter)
+endif()
+
 if (DEFINED VERSION)
     set(GRAPHVIZ_VERSION_STRING "${VERSION}")
 else()
+    if(NOT Python3_EXECUTABLE)
+      message(FATAL_ERROR "Python 3 not found")
+    endif()
     execute_process(
-        COMMAND           python3 gen_version.py
+        COMMAND           ${Python3_EXECUTABLE} gen_version.py
         WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
         RESULT_VARIABLE   gen_version_result
         OUTPUT_VARIABLE   GRAPHVIZ_VERSION_STRING
@@ -125,9 +134,12 @@ endif()
 if (DEFINED DATE)
     set(GRAPHVIZ_VERSION_BUILD "${DATE}")
 else()
+    if(NOT Python3_EXECUTABLE)
+      message(FATAL_ERROR "Python 3 not found")
+    endif()
     # Set GRAPHVIZ_VERSION_BUILD to time of last commit, or to 0 if that fails.
     execute_process(
-        COMMAND           python3 gen_version.py --committer-date-graphviz
+        COMMAND           ${Python3_EXECUTABLE} gen_version.py --committer-date-graphviz
         WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
         RESULT_VARIABLE   gen_date_result
         OUTPUT_VARIABLE   GRAPHVIZ_VERSION_BUILD
