--- a/lib/version/version.vcxproj
+++ b/lib/version/version.vcxproj
@@ -94,8 +94,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>python3 $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
-python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
+      <Command>python $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
+python $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
 </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -115,8 +115,8 @@ python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\inc
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>python3 $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
-python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
+      <Command>python $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
+python $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
 </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -132,8 +132,8 @@ python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\inc
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>python3 $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
-python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
+      <Command>python $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
+python $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
 </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
@@ -153,8 +153,8 @@ python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\inc
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <PreBuildEvent>
-      <Command>python3 $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
-python3 $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
+      <Command>python $(SolutionDir)gen_version.py --committer-date-graphviz --definition &gt; $(SolutionDir)windows\include\builddate.h
+python $(SolutionDir)gen_version.py --definition &gt; $(SolutionDir)windows\include\version.h
 </Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
