remove now-unused md5 implementation in Smyrna
Closes #2050.

--- a/cmd/smyrna/Makefile.am
+++ b/cmd/smyrna/Makefile.am
@@ -41,7 +41,7 @@ endif
 
 noinst_HEADERS = arcball.h draw.h glexpose.h \
 	glmotion.h gltemplate.h gui/appmouse.h gui/callbacks.h \
-	hotkeymap.h materials.h md5.h polytess.h selectionfuncs.h \
+	hotkeymap.h materials.h polytess.h selectionfuncs.h \
 	smyrna_utils.h smyrnadefs.h topfisheyeview.h \
 	topviewdefs.h topviewfuncs.h trackball.h tvnodes.h \
 	viewport.h viewportcamera.h support.h \
@@ -51,7 +51,7 @@ noinst_HEADERS = arcball.h draw.h glexpose.h \
 
 smyrna_SOURCES = arcball.c draw.c glexpose.c \
 	glmotion.c gltemplate.c gui/appmouse.c gui/callbacks.c \
-	gvprpipe.c hier.c hotkeymap.c main.c md5.c polytess.c \
+	gvprpipe.c hier.c hotkeymap.c main.c polytess.c \
 	selectionfuncs.c smyrna_utils.c topfisheyeview.c \
 	topviewfuncs.c trackball.c  tvnodes.c \
 	viewport.c viewportcamera.c \
