--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -569,6 +569,20 @@ ubuntu20-10-test:
     variables:
       IMAGE: ubuntu-20.10
 
+ubuntu21-04-test:
+    <<: *linux_test_definition
+    before_script:
+        - export build_system="autotools"
+    needs:
+        - job: portable-source
+          artifacts: true
+        - job: "ubuntu21-04-build"
+          artifacts: true
+    tags:
+        - linux
+    variables:
+      IMAGE: ubuntu-21.04
+
 centos7-test:
     <<: *linux_test_definition
     before_script:
