--- a/.pylintrc
+++ b/.pylintrc
@@ -141,7 +141,8 @@ disable=print-statement,
         redefined-builtin,
         too-many-branches,
         too-many-statements,
-        too-few-public-methods
+        too-few-public-methods,
+        logging-fstring-interpolation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
