disable invalid-name Pylint warning
Pylint has a very narrow idea of acceptable names. Things it does not like, such
as single letter variable names, are not really a problem in the Graphviz
scripts.

--- a/.pylintrc
+++ b/.pylintrc
@@ -143,7 +143,8 @@ disable=print-statement,
         too-many-statements,
         too-few-public-methods,
         logging-fstring-interpolation,
-        subprocess-run-check
+        subprocess-run-check,
+        invalid-name
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
