disable Pylint warning about use of the global statement
While this may be considered a code smell in larger Python code bases, the use
of global in the Graphviz scripts is reasonably well motivated.

--- a/.pylintrc
+++ b/.pylintrc
@@ -145,7 +145,8 @@ disable=print-statement,
         logging-fstring-interpolation,
         subprocess-run-check,
         invalid-name,
-        too-many-locals
+        too-many-locals,
+        global-statement
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
