remove unused exlexname
This function is uncalled and not exposed to users.

--- a/lib/expr/Makefile.am
+++ b/lib/expr/Makefile.am
@@ -33,7 +33,7 @@ endif
 #libexpr_la_LDFLAGS = -version-info $(EXPR_VERSION) -no-undefined
 
 libexpr_C_la_SOURCES = excc.c excontext.c exdata.c exerror.c \
-	exeval.c exexpr.c exlexname.c exopen.c exrewind.c extoken.c \
+	exeval.c exexpr.c exopen.c exrewind.c extoken.c \
 	extype.c exzero.c exparse.y exnospace.c exstash.c 
 libexpr_C_la_LIBADD = \
 	$(top_builddir)/lib/ast/libast_C.la \
