--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -140,7 +140,8 @@ portable-source:
         # Build
         - Set-ExecutionPolicy Bypass -Force -Scope Process
         - $logfile = New-TemporaryFile
-        - windows/bin/setup-and-build.ps1 -buildsystem $env:build_system -platform $Env:project_platform -configuration $env:configuration 2>&1 | tee $logfile
+        - windows/bin/setup-build-utilities.ps1 2>&1 | tee $logfile
+        - python ci/build_windows.py --build-system $env:build_system --platform $Env:project_platform --configuration $env:configuration 2>&1 | tee -a $logfile
         - $warnings_count = Invoke-Expression "grep -c ' warning ' $logfile"
         - echo "$CI_JOB_NAME-warnings $warnings_count" > metrics.txt
         - rm $logfile
