output source data for Linux downloads on the website during deployment
Commit 1b218752f5b6a1e661e158337fc1b976424fc6a0 of the website repository¹
changed how Linux downloads appear on the website to be driven by a JSON data
file. This commit updates the deployment script to produce this file for a
release as a CI job artifact. Related to #1979.

¹ https://gitlab.com/graphviz/graphviz.gitlab.io

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -837,6 +837,11 @@ deployment:
     # do not run this job for MRs, developer’s forks, etc.
     only:
         - main@graphviz/graphviz
+    artifacts:
+        when: on_success
+        expire_in: 1 week
+        paths:
+            - graphviz-*.json
 
 .docker_template: &docker_definition
   image: docker:stable
