--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -930,41 +930,57 @@ docker_push_centos7:
   <<: *docker_push_definition
   variables:
     IMAGE: centos7
+  needs:
+    - docker_build_centos7
 
 docker_push_centos8:
   <<: *docker_push_definition
   variables:
     IMAGE: centos8
+  needs:
+    - docker_build_centos8
 
 docker_push_fedora32:
   <<: *docker_push_definition
   variables:
     IMAGE: fedora32
+  needs:
+    - docker_build_fedora32
 
 docker_push_fedora33:
   <<: *docker_push_definition
   variables:
     IMAGE: fedora33
+  needs:
+    - docker_build_fedora33
 
 docker_push_ubuntu-18.04:
   <<: *docker_push_definition
   variables:
     IMAGE: ubuntu-18.04
+  needs:
+    - docker_build_ubuntu-18.04
 
 docker_push_ubuntu-20.04:
   <<: *docker_push_definition
   variables:
     IMAGE: ubuntu-20.04
+  needs:
+    - docker_build_ubuntu-20.04
 
 docker_push_ubuntu-20.10:
   <<: *docker_push_definition
   variables:
     IMAGE: ubuntu-20.10
+  needs:
+    - docker_build_ubuntu-20.10
 
 docker_push_ubuntu-21.04:
   <<: *docker_push_definition
   variables:
     IMAGE: ubuntu-21.04
+  needs:
+    - docker_build_ubuntu-21.04
 
 lint_pylint:
   image: "$CI_REGISTRY_IMAGE/ubuntu-20.10:$CI_COMMIT_SHA"
