--- a/plugin/quartz/Makefile.am
+++ b/plugin/quartz/Makefile.am
@@ -38,5 +38,6 @@ endif
 
 if WITH_DARWIN9
 libgvplugin_quartz_la_LDFLAGS += -Wl,-exported_symbol,_gvplugin_quartz_LTX_library
-AM_LIBTOOLSFLAGS = --tag=CC
 endif
+
+AM_LIBTOOLFLAGS = --tag=CC
